services/torrserver/00-namespace.yaml
# services/torrserver/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
