services/torrserver/02-deployment.yaml
# services/torrserver/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torrserver
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: torrserver
  template:
    metadata:
      labels:
        app: torrserver
    spec:
      containers:
        - name: torrserver
          # <<< ИЗМЕНЕНИЕ ЗДЕСЬ >>>
          # Меняем на рабочий и поддерживаемый образ
          image: yourok/torrserver
          ports:
            - containerPort: 8090
          volumeMounts:
            - name: data
              mountPath: /data
            - name: temp
              mountPath: /tmp
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: torrserver-data-pvc
        - name: temp
          emptyDir: {}
